--- a/gs2020.tex
+++ b/gs2020.tex
@@ -1,3 +1,6 @@
+%!TEX TS-program = xelatex
+%!TEX encoding = UTF-8 Unicode
+%!TEX root = 2020-GS-ARTICLE.tex
 %-------------------------------------------------------------------------------
 %-------------------------------------------------------------------------------
 %	CUSTOM PACKAGES AND OTHER DOCUMENT CONFIGURATIONS
@@ -63,15 +66,15 @@
 \setlength{\droptitle}{-4\baselineskip} % Move the title up
 \pretitle{\begin{center}\huge\bfseries} % Article title formatting
 \posttitle{\end{center}} % Article title closing formatting
-\title{General Relativity \\ \large{\emph{For a more accessible and less technical introduction to this topic, \\ see Introduction to General Relativity}}} % Article title
+\title{\mytitle \\ \large{\emph{\mysubtitle}}} % Article title
 \author{%
-\textsc{Orgo Wikipedio}\\%[1ex]%
-\normalsize Conservatorio S. Cecilia di Roma \\ % Your institution
-\normalsize orgo @ wikipedio.com % Your email address
-\and % Uncomment if 2 authors are required, duplicate these 4 lines if more
-\textsc{Wikio Orgopedio}\\%[1ex]%
-\normalsize Conservatorio S. Cecilia di Roma \\ % Your institution
-\normalsize wikio @ orgopedio.com % Your email address
+\textsc{\authorone}\\%
+\normalsize \institutione \\ %
+\normalsize \emailone %
+% \and % duplicate these 4 lines if more
+% \textsc{\authortwo} \\%
+% \normalsize \institutiontwo \\ %
+% \normalsize \emailtwo %
 }
 \date{} % Leave empty to omit a date
 
@@ -135,4 +138,95 @@
   emphstyle=\color{yotxt}, %\underline, %\bfseries,
   morecomment=[s][\color{mylstdoc}]{<mdoc>}{</mdoc>},
   rulecolor=\color{black}
+}
+
+\usepackage[framemethod=tikz]{mdframed} % Allows defining custom boxed/framed environments
+
+%-------------------------------------------------------------------------------
+%--------------------------------------------------- INFORMATION ENVIRONMENT ---
+%-------------------------------------------------------------------------------
+
+% Usage:
+% \begin{info}[optional title, defaults to "Info:"]
+% 	contents
+% 	\end{info}
+
+\mdfdefinestyle{info}{%
+	topline=false, bottomline=false,
+	leftline=false, rightline=false,
+	nobreak,
+	singleextra={%
+		\fill[black](P-|O)circle[radius=0.4em];
+		\node at(P-|O){\color{white}\scriptsize\bf i};
+		\draw[very thick](P-|O)++(0,-0.8em)--(O);%--(O-|P);
+	}
+}
+
+% Define a custom environment for information
+\newenvironment{info}[1][Info:]{ % Set the default title to "Info:"
+	\medskip
+	\begin{mdframed}[style=info]
+		\noindent{\textbf{#1}}
+}{
+	\end{mdframed}
+}
+
+%-------------------------------------------------------------------------------
+%----------------------------------------------------- BIOGRAFIA ENVIRONMENT ---
+%-------------------------------------------------------------------------------
+
+% Usage:
+% \begin{bio}[optional title, defaults to "Info:"]
+% 	contents
+% 	\end{bio}
+
+\mdfdefinestyle{bio}{%
+	topline=false, bottomline=false,
+	leftline=false, rightline=false,
+	nobreak,
+	singleextra={%
+		\fill[black](P-|O)circle[radius=0.4em];
+		\node at(P-|O){\color{white}\scriptsize\bf b};
+		\draw[very thick](P-|O)++(0,-0.8em)--(O);%--(O-|P);
+	}
+}
+
+% Define a custom environment for information
+\newenvironment{bio}[1][Biografia:]{ % Set the default title to "Info:"
+	\medskip
+	\begin{mdframed}[style=bio]
+		\noindent{\textbf{#1}}
+}{
+	\end{mdframed}
+}
+
+%-------------------------------------------------------------------------------
+%------------------------------------------------------- WARNING ENVIRONMENT ---
+%-------------------------------------------------------------------------------
+
+% Usage:
+% \begin{warn}[optional title, defaults to "Warning:"]
+%	Contents
+% \end{warn}
+
+\mdfdefinestyle{warning}{
+	topline=false, bottomline=false,
+	leftline=false, rightline=false,
+	nobreak,
+	singleextra={%
+		\draw(P-|O)++(-0.5em,0)node(tmp1){};
+		\draw(P-|O)++(0.5em,0)node(tmp2){};
+		\fill[black,rotate around={45:(P-|O)}](tmp1)rectangle(tmp2);
+		\node at(P-|O){\color{white}\scriptsize\bf !};
+		\draw[very thick](P-|O)++(0,-1em)--(O);%--(O-|P);
+	}
+}
+
+% Define a custom environment for warning text
+\newenvironment{warn}[1][Warning:]{ % Set the default warning to "Warning:"
+	\medskip
+	\begin{mdframed}[style=warning]
+		\noindent{\textbf{#1}}
+}{
+	\end{mdframed}
 }
