--- a/gs2020.tex
+++ b/gs2020.tex
@@ -56,7 +56,7 @@
 \usepackage{titlesec} % Allows customization of titles
 \renewcommand\thesection{\Roman{section}} % Roman numerals for the sections
 \renewcommand\thesubsection{\Roman{subsection}} % roman numerals for subsections
-\titleformat{\section}[block]{\large\centering}{\thesection.}{1em}{} % Change the look of the section titles
+\titleformat{\section}[block]{\large\centering\bfseries}{\thesection.}{1em}{} % Change the look of the section titles
 \titleformat{\subsection}[block]{\large}{\thesubsection.}{1em}{} % Change the look of the section titles
 %-------------------------------------------------------------------------------
 %-------------------------------------------------------------------------------
@@ -82,7 +82,7 @@
 \pagestyle{fancy} % All pages have headers and footers
 \fancyhead{} % Blank out the default header
 \fancyfoot{} % Blank out the default footer
-\fancyhead[C]{\small Wikipedia • General Relativity} % Custom header text
+\fancyhead[C]{\small \mytitle • \mysubtitle} % Custom header text
 \fancyfoot[RO,LE]{\small \today~ • w: \input{includes/words.txt} • c: \input{includes/char.txt} • p:~\thepage} % Custom footer text
 %-------------------------------------------------------------------------------
 %-------------------------------------------------------------------------------
